// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VariableEditor > renders correctly with empty variables 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
              fill="currentColor"
            />
          </svg>
        </span>
        New Variable
      </button>
    </div>
    <div
      class="msla-variable-editor-content"
    >
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="name0"
            title="name"
          >
            name
            <span
              aria-label="Required"
              class="___17auu19_0000000 f23f7i0 f2lugmd"
            >
              *
            </span>
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            data-automation-id="undefined-name-0"
            id="msla-tokenpicker-callout-location3"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message4"
              aria-labelledby="name - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="name - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter variable name"
            >
              <p
                class="editor-paragraph"
              >
                <br />
              </p>
            </div>
            <span
              class="editor-placeholder"
            >
              Enter variable name
            </span>
            <span
              hidden=""
              id="msla-described-by-message4"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="type1"
            title="type"
          >
            type
            <span
              aria-label="Required"
              class="___17auu19_0000000 f23f7i0 f2lugmd"
            >
              *
            </span>
          </label>
        </div>
        <div
          class="___1lmsmok_0000000 f14t3ns0 f10pi13n fly5x3f"
          data-automation-id="undefined-type-0"
        >
          <div
            class="ms-Dropdown-container root-185"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-186"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown5"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-187"
                id="Dropdown5-option"
              >
                Select variable type
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-188"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-206"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="value2"
            title="value"
          >
            value
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            data-automation-id="undefined-value-0"
            id="msla-tokenpicker-callout-location6"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message7"
              aria-labelledby="value - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="value - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter initial value"
            >
              <p
                class="editor-paragraph"
              >
                <br />
              </p>
            </div>
            <span
              class="editor-placeholder"
            >
              Enter initial value
            </span>
            <span
              hidden=""
              id="msla-described-by-message7"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
              fill="currentColor"
            />
          </svg>
        </span>
        testVariable
      </button>
    </div>
    <div
      class="msla-variable-editor-content"
    >
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="name8"
            title="name"
          >
            name
            <span
              aria-label="Required"
              class="___17auu19_0000000 f23f7i0 f2lugmd"
            >
              *
            </span>
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            data-automation-id="undefined-name-0"
            id="msla-tokenpicker-callout-location11"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message12"
              aria-labelledby="name - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="name - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter variable name"
            >
              <p
                class="editor-paragraph ltr"
                dir="ltr"
              >
                <span
                  data-lexical-text="true"
                >
                  testVariable
                </span>
              </p>
            </div>
            <span
              hidden=""
              id="msla-described-by-message12"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="type9"
            title="type"
          >
            type
            <span
              aria-label="Required"
              class="___17auu19_0000000 f23f7i0 f2lugmd"
            >
              *
            </span>
          </label>
        </div>
        <div
          class="___1lmsmok_0000000 f14t3ns0 f10pi13n fly5x3f"
          data-automation-id="undefined-type-0"
        >
          <div
            class="ms-Dropdown-container root-185"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-186"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown13"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-207"
                id="Dropdown13-option"
              >
                Boolean
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-188"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-206"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="value10"
            title="value"
          >
            value
          </label>
        </div>
        <div
          class="msla-combobox-container"
        >
          <div
            class="msla-combobox-editor-container"
          >
            <div
              style="width: 100%;"
            >
              <div
                class="msla-combobox-editor"
                data-automation-id="undefined-value-0"
                id="msla-tokenpicker-callout-location14"
                style="position: relative;"
              >
                <div
                  aria-describedby="msla-described-by-message15"
                  aria-labelledby="value - 0"
                  class="editor-input"
                  contenteditable="true"
                  data-lexical-editor="true"
                  data-testid="value - 0 contenteditable"
                  role="textbox"
                  spellcheck="false"
                  style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
                  tabindex="0"
                  title="Enter initial value"
                >
                  <p
                    class="editor-paragraph ltr"
                    dir="ltr"
                  >
                    <span
                      data-lexical-text="true"
                    >
                      testValue
                    </span>
                  </p>
                </div>
                <span
                  hidden=""
                  id="msla-described-by-message15"
                >
                  Add dynamic data or expressions by inserting a /
                </span>
              </div>
            </div>
            <button
              aria-label="Clear custom value"
              class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
              style="height: 26px; width: 26px; margin: 2px; position: absolute; right: 0px;"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.21 4.39.08-.1a1 1 0 0 1 1.32-.08l.1.08L12 10.6l6.3-6.3a1 1 0 1 1 1.4 1.42L13.42 12l6.3 6.3a1 1 0 0 1 .08 1.31l-.08.1a1 1 0 0 1-1.32.08l-.1-.08L12 13.4l-6.3 6.3a1 1 0 0 1-1.4-1.42L10.58 12l-6.3-6.3a1 1 0 0 1-.08-1.31l.08-.1-.08.1Z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.4 4.55.07-.08a.75.75 0 0 1 .98-.07l.08.07L12 10.94l6.47-6.47a.75.75 0 1 1 1.06 1.06L13.06 12l6.47 6.47c.27.27.3.68.07.98l-.07.08a.75.75 0 0 1-.98.07l-.08-.07L12 13.06l-6.47 6.47a.75.75 0 0 1-1.06-1.06L10.94 12 4.47 5.53a.75.75 0 0 1-.07-.98l.07-.08-.07.08Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable with Token 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="true"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
              fill="currentColor"
            />
          </svg>
        </span>
        testVariable
      </button>
    </div>
    <div
      class="msla-variable-editor-content"
    >
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="name16"
            title="name"
          >
            name
            <span
              aria-label="Required"
              class="___17auu19_0000000 f23f7i0 f2lugmd"
            >
              *
            </span>
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            data-automation-id="undefined-name-0"
            id="msla-tokenpicker-callout-location19"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message20"
              aria-labelledby="name - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="name - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter variable name"
            >
              <p
                class="editor-paragraph ltr"
                dir="ltr"
              >
                <span
                  data-lexical-text="true"
                >
                  testVariable
                </span>
              </p>
            </div>
            <span
              hidden=""
              id="msla-described-by-message20"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="type17"
            title="type"
          >
            type
            <span
              aria-label="Required"
              class="___17auu19_0000000 f23f7i0 f2lugmd"
            >
              *
            </span>
          </label>
        </div>
        <div
          class="___1lmsmok_0000000 f14t3ns0 f10pi13n fly5x3f"
          data-automation-id="undefined-type-0"
        >
          <div
            class="ms-Dropdown-container root-185"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-186"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown21"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-207"
                id="Dropdown21-option"
              >
                Boolean
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-188"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-206"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label ___jmchtt0_0000000 ftgm304 f1a3p1vp f1cmbuwj fy9rknc f1lgtm6f f1o700av fhx3js9 fhuq1gn root-184"
            id="value18"
            title="value"
          >
            value
          </label>
        </div>
        <div
          class="msla-combobox-container"
        >
          <div
            class="msla-combobox-editor-container"
          >
            <div
              style="width: 100%;"
            >
              <div
                class="msla-combobox-editor"
                data-automation-id="undefined-value-0"
                id="msla-tokenpicker-callout-location22"
                style="position: relative;"
              >
                <div
                  aria-describedby="msla-described-by-message23"
                  aria-labelledby="value - 0"
                  class="editor-input"
                  contenteditable="true"
                  data-lexical-editor="true"
                  data-testid="value - 0 contenteditable"
                  role="textbox"
                  spellcheck="false"
                  style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
                  tabindex="0"
                  title="Enter initial value"
                />
                <span
                  class="editor-placeholder"
                >
                  Enter initial value
                </span>
                <span
                  hidden=""
                  id="msla-described-by-message23"
                >
                  Add dynamic data or expressions by inserting a /
                </span>
              </div>
            </div>
            <button
              aria-label="Clear custom value"
              class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
              style="height: 26px; width: 26px; margin: 2px; position: absolute; right: 0px;"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.21 4.39.08-.1a1 1 0 0 1 1.32-.08l.1.08L12 10.6l6.3-6.3a1 1 0 1 1 1.4 1.42L13.42 12l6.3 6.3a1 1 0 0 1 .08 1.31l-.08.1a1 1 0 0 1-1.32.08l-.1-.08L12 13.4l-6.3 6.3a1 1 0 0 1-1.4-1.42L10.58 12l-6.3-6.3a1 1 0 0 1-.08-1.31l.08-.1-.08.1Z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.4 4.55.07-.08a.75.75 0 0 1 .98-.07l.08.07L12 10.94l6.47-6.47a.75.75 0 1 1 1.06 1.06L13.06 12l6.47 6.47c.27.27.3.68.07.98l-.07.08a.75.75 0 0 1-.98.07l-.08-.07L12 13.06l-6.47 6.47a.75.75 0 0 1-1.06-1.06L10.94 12 4.47 5.53a.75.75 0 0 1-.07-.98l.07-.08-.07.08Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
